# pact

./: Cargo.toml  DESIGN-V2.md  PRD-V2.md  README.md
client/: demo.ts  package-lock.json  package.json  pact.test.ts  pact.ts  pact_v2.test.ts  pact_v2.ts
demo/: video-script.md
docs/: INTEGRATION.md  SKILL.md  index.html
src/: instructions.rs  instructions_v2.rs  lib.rs  lib_v2.rs
tests/: escrow_logic.rs  escrow_v2_test.rs
video-frames/: create-frames.sh
